Attempt to fix autoplay on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ header{
     );
 
     z-index:1;
+    pointer-events:none;
 }
 
 .hero h2{
@@ -77,6 +78,7 @@ header{
 
     color:white;
     padding: 20px;
+    pointer-events:none;
 }
 
 .hero-overlay h1{
@@ -110,6 +112,7 @@ header{
     flex-wrap: wrap;
     gap:20px;
     margin-top:30px;
+    pointer-events:auto;
 }
 
 .hero-buttons a{
